fixed color contrast again

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 .progress, .feedback-section, #result {
-  color: #FF1493;
+  color: #990956;
 }
 
 .button, .btn, #restart {
